--- a/FormatedText.html
+++ b/FormatedText.html
@@ -8,10 +8,11 @@
     <link type="text/css" rel="stylesheet" href="Styles/SyntaxHighlighter.css"></link>
     <!-- <link href="Styles/TestPages.css" rel="stylesheet" type="text/css"> -->
 
-    <script src="jquery-3.5.1.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous">
+    </script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
-
+    <script class="javascript" src="Scripts/formatted.js"></script>
     <script class="javascript" src="Scripts/shCore.js"></script>
 
     <!-- painters -->
@@ -28,6 +29,7 @@
     <script class="javascript" src="Scripts/shBrushCss.js"></script>
     <script class="javascript" src="Scripts/shBrushCpp.js"></script>
 
+
     <script type="text/javascript">
         window.addEventListener('beforeunload', function(e) {
             localStorage.clear();
@@ -36,21 +38,7 @@
 
     <script>
         $(document).ready(function() {
-
-            let language = localStorage['lang'];
-            let code = localStorage['text_to_highlight'];
-            $('.dp-highlighter').remove(); // make sure there is only one higlighted text at a time.
-            let pre = $('pre[name="code"]') //get pre formatted text area
-            pre.removeClass(); //remove any previous class (classes are determining how to format the code)
-            pre.addClass(language); // add relevant class
-            pre.removeAttr('style');
-            pre.text(code); //insert input text into pre field
-
-            if (window.isBloggerMode == true)
-                dp.SyntaxHighlighter.BloggerMode();
-            dp.SyntaxHighlighter.ClipboardSwf = 'Scripts/clipboard.swf';
-            dp.SyntaxHighlighter.HighlightAll('code'); // actually highlighing
-
+            format_code()
         })
     </script>
 
